# quasifind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  a.out  captured_quoted.txt  compile_flags.txt  dune-project  quasifind.opam  task.md  test_getattrlistbulk  test_mmap.txt
bench/: bench_content.sh  experiment_parallel.sh  fast_generate.py  generate_data.sh  mmap_benchmark.sh  run_benchmark.sh  test.ml
docs/: Proposal.md  cli_syntax_sugar_plan.md
docs/cli_syntax_sugar_design/: implementation_plan.md  task.md  walkthrough.md
docs/daemon_experiment/: future_improvements.md  implementation_plan.md  plan.md  task.md  walkthrough.md
docs/daemon_ux_improvement/: implementation_plan.md  task.md  walkthrough.md
docs/design/: search_engine_evolution.md
docs/file_manager_architecture/: requirements.md
docs/fix_header_error/: implementation_plan.md  task.md  walkthrough.md
docs/implementation_planning/: implementation_plan.md  task.md  walkthrough.md
docs/interactive_search/: implementation_plan.md  task.md  walkthrough.md
docs/linux_build_attempt_rollback/: implementation_plan.md  task.md  walkthrough.md
docs/mli_interfaces_and_odoc/: implementation_plan.md  task.md  walkthrough.md
docs/parallel_tuning_and_deduplication/: implementation_plan.md  task.md  walkthrough.md
docs/resilience_hardening/: implementation_plan.md  task.md  walkthrough.md
docs/stub_rewrite_plan/: plan.md
docs/wiki/: Usage-Guide.md
lib/: dune  quasifind.ml
lib/quasifind/: art.ml  art.mli  ast.ml  ast.mli  config.ml  config.mli  daemon.ml  daemon.mli  dirent.ml  dirent.mli  dirent_stubs.c  dirent_stubs.zig  eval.ml  eval.mli  exec.ml  exec.mli  formatter.ml  formatter.mli  fsevents.ml  fsevents.mli  fsevents_stubs.c  fsevents_stubs.zig  fuzzy_matcher.ml  fuzzy_matcher.mli  ghost.ml  ghost.mli  history.ml  history.mli  interactive.ml  interactive.mli  intern.ml  intern.mli  ipc.ml  ipc.mli  parser.ml  parser.mli  profile.ml  profile.mli  qerror.ml  qerror.mli  (+25 more)
test/: dune  test_art.ml  test_cli.t  test_config.ml  test_content.ml  test_entropy.ml  test_exec.ml  test_ghost.ml  test_history.ml  test_interactive.ml  test_ipc.ml  test_ls.t  test_profile.ml  test_props.ml  test_qerror.ml  test_quasifind.ml  test_rule_converter.ml  test_rules.ml  test_stealth.ml  test_suspicious.ml  test_traversal.ml  test_vfs.ml  test_watcher.ml  test_zig.ml
