(library
 (name quasifind)
 (public_name quasifind)
 (modules
  ast
  parser
  typecheck
  eval
  traversal
  exec
  history
  fuzzy_matcher
  interactive
  config
  profile
  watcher
  stealth
  suspicious
  ghost
  rule_loader
  rule_converter
  dirent
  search)
 (libraries angstrom re eio eio_main yojson str saturn)
 (foreign_stubs
  (language c)
  (names stealth_stubs dirent_stubs search_stubs))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(include_subdirs unqualified)
