(library
 (name quasifind)
 (public_name quasifind)
 (modules
  qerror
  ast
  parser
  typecheck
  eval
  regex_cache
  traversal
  exec
  history
  fuzzy_matcher
  interactive
  config
  profile
  watcher
  suspicious
  ghost
  intern
  rule_loader
  rule_converter
  dirent
  search
  vfs
  ipc
  daemon
  art
  fsevents
  formatter)
 (libraries angstrom re eio eio_main yojson str saturn)
 (foreign_stubs
  (language c)
  (names dirent_stubs search_stubs fsevents_stubs))
 (c_library_flags
  (-framework CoreServices))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(include_subdirs unqualified)
