(library
 (name quasifind)
 (public_name quasifind)
 (modules
  qerror
  ast
  parser
  typecheck
  eval
  regex_cache
  traversal
  exec
  history
  fuzzy_matcher
  interactive
  config
  profile
  watcher
  suspicious
  ghost
  intern
  rule_loader
  rule_converter
  dirent
  search
  vfs
  ipc
  daemon
  art
  fsevents
  formatter)
 (libraries angstrom re eio eio_main yojson str saturn)
 (foreign_archives dirent_stubs search_stubs fsevents_stubs)
 (c_library_flags
  (-framework CoreServices))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(include_subdirs unqualified)

(rule
 (targets libdirent_stubs.a dlldirent_stubs.so)
 (deps quasifind/dirent_stubs.zig)
 (action
  (bash
   "zig build-obj %{deps} -I $(ocamlc -where) -target aarch64-macos -O ReleaseFast -femit-bin=dirent_stubs.o && ar rcs libdirent_stubs.a dirent_stubs.o && zig cc -target aarch64-macos -shared -o dlldirent_stubs.so dirent_stubs.o -Wl,-undefined,dynamic_lookup")))

(rule
 (targets libsearch_stubs.a dllsearch_stubs.so)
 (deps quasifind/search_stubs.zig)
 (action
  (bash
   "zig build-obj %{deps} -I $(ocamlc -where) -target aarch64-macos -O ReleaseFast -femit-bin=search_stubs.o && ar rcs libsearch_stubs.a search_stubs.o && zig cc -target aarch64-macos -shared -o dllsearch_stubs.so search_stubs.o -Wl,-undefined,dynamic_lookup")))

(rule
 (targets libfsevents_stubs.a dllfsevents_stubs.so)
 (deps quasifind/fsevents_stubs.zig)
 (action
  (bash
   "zig build-obj %{deps} -I $(ocamlc -where) -target aarch64-macos -O ReleaseFast -femit-bin=fsevents_stubs.o && ar rcs libfsevents_stubs.a fsevents_stubs.o && zig cc -target aarch64-macos -shared -o dllfsevents_stubs.so fsevents_stubs.o -Wl,-undefined,dynamic_lookup --sysroot $(xcrun --show-sdk-path) -F $(xcrun --show-sdk-path)/System/Library/Frameworks -framework CoreServices -framework CoreFoundation")))
